--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <section id="penny">
                     <div class="container">
                         <h2>Penny</h2>
-                        <img src="assets/penny.jpg" alt="Penny">
+                        <img src="assets/penny.gif" alt="Penny">
                         <p>Penny is the aspiring actress who lives across the hall from Sheldon and Leonard. She brings a dose of normalcy to their geeky world.</p>
                     </div>
                 </section>
@@ -66,7 +66,7 @@
                 <section id="howard">
                     <div class="container">
                         <h2>Howard Wolowitz</h2>
-                        <img src="assets/howard.jpg" alt="Howard Wolowitz">
+                        <img src="assets/howard.gif" alt="Howard Wolowitz">
                         <p>Howard is an aerospace engineer with a penchant for pick-up lines and a unique fashion sense. He is married to Bernadette.</p>
                     </div>
                 </section>
@@ -74,7 +74,7 @@
                 <section id="raj">
                     <div class="container">
                         <h2>Rajesh Koothrappali</h2>
-                        <img src="assets/raj.jpg" alt="Rajesh Koothrappali">
+                        <img src="assets/raj.gif" alt="Rajesh Koothrappali">
                         <p>Raj is an astrophysicist who struggles with selective mutism, making it difficult for him to talk to women. He's known for his charm and humor.</p>
                     </div>
                 </section>
